docs: update readme

--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
         </div>
         <div class="footer__extra">
             <p class="footer__company">© 2024 ООО «Учебная империя»</p>
-            <p class="footer__policy">Политика обработки персональных данных</p>
+            <a class="footer__policy">Политика обработки персональных данных</a>
         </div>
     </div>
 </footer>
